// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AsyncExample.jsx 1`] = `
<DocumentFragment>
  <div>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
    >
      Open Modal
    </button>
  </div>
</DocumentFragment>
`;

exports[`BasicUsageExample.jsx 1`] = `
<DocumentFragment>
  <div>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
    >
      Open Modal
    </button>
  </div>
</DocumentFragment>
`;

exports[`CustomFooterExample.jsx 1`] = `
<DocumentFragment>
  <div>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="margin-right: 16px;"
    >
      只显示确认按钮
    </button>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="margin-right: 16px;"
    >
      自定义按钮内容
    </button>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="margin-right: 16px;"
    >
      自定义内容
    </button>
  </div>
</DocumentFragment>
`;

exports[`NotModalExample.jsx 1`] = `
<DocumentFragment>
  <div>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
    >
      Open Modal
    </button>
  </div>
</DocumentFragment>
`;

exports[`PositionExample.jsx 1`] = `
<DocumentFragment>
  <div>
    <div>
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        style="margin-right: 16px;"
      >
        默认
      </button>
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        style="margin-right: 16px;"
      >
        顶部
      </button>
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
      >
        自定义
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`async.jsx 1`] = `
<DocumentFragment>
  <div>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
    >
      Open Modal
    </button>
  </div>
</DocumentFragment>
`;

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
    >
      Open Modal
    </button>
  </div>
</DocumentFragment>
`;

exports[`custom.jsx 1`] = `
<DocumentFragment>
  <div>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="margin-right: 16px;"
    >
      只显示确认按钮
    </button>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="margin-right: 16px;"
    >
      自定义按钮内容
    </button>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="margin-right: 16px;"
    >
      自定义内容
    </button>
  </div>
</DocumentFragment>
`;

exports[`icon.jsx 1`] = `
<DocumentFragment>
  <div>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
    >
      Open Modal
    </button>
  </div>
</DocumentFragment>
`;

exports[`warning.jsx 1`] = `
<DocumentFragment>
  <div>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="margin-right: 16px;"
    >
      提示反馈
    </button>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="margin-right: 16px;"
    >
      成功反馈
    </button>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="margin-right: 16px;"
    >
      警示反馈
    </button>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="margin-right: 16px;"
    >
      错误反馈
    </button>
  </div>
</DocumentFragment>
`;
